# mof_builder

./: README.md  pyproject.toml  requirements.txt  setup.py
data/: sp2_sacada.db
tests/: test_all.py
xtal_lego/: SO3.py  builder.py  version.py
